--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run build
 
       - name: Add .nojekyll file
-        run: touch ./dist/.nojekyll
+        run: echo "" > ./dist/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
